Rebrand - additional renaming

--- a/src/config/bytz-config.h.in
+++ b/src/config/bytz-config.h.in
@@ -1,8 +1,8 @@
-/* src/config/dash-config.h.in.  Generated from configure.ac by autoheader.  */
+/* src/config/bytz-config.h.in.  Generated from configure.ac by autoheader.  */
 
-#ifndef DASH_CONFIG_H
+#ifndef BYTZ_CONFIG_H
 
-#define DASH_CONFIG_H
+#define BYTZ_CONFIG_H
 
 /* Define if building universal (internal helper macro) */
 #undef AC_APPLE_UNIVERSAL_BUILD
@@ -448,4 +448,4 @@
 /* Define for large files, on AIX-style hosts. */
 #undef _LARGE_FILES
 
-#endif //DASH_CONFIG_H
+#endif //BYTZ_CONFIG_H
