Add token document hashing, signing and verification

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -271,6 +271,7 @@ BITCOIN_CORE_H = \
   tokens/tokendb.h \
   tokens/tokengroupconfiguration.h \
   tokens/tokengroupdescription.h \
+  tokens/tokengroupdocument.h \
   tokens/tokengroupmanager.h \
   tokens/tokengroupwallet.h \
   tokens/rpctokenwallet.h \
@@ -669,6 +670,7 @@ libbytz_common_a_SOURCES = \
   tokens/rpctokens.cpp \
   tokens/tokengroupconfiguration.cpp \
   tokens/tokengroupdescription.cpp \
+  tokens/tokengroupdocument.cpp \
   tokens/tokengroupmanager.cpp \
   warnings.cpp \
   $(BITCOIN_CORE_H)
